--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
@@ -7,7 +7,7 @@
 
 <body>
 
-<header>
+<header th:replace="~{header :: header}">
     header 삽입부
     <hr>
 </header>
@@ -77,12 +77,7 @@
 
 </main>
 
-<footer>
-    <hr>
-    푸터 삽입부
-
-
-</footer>
+<footer th:replace="footer :: footer"></footer>
 
 
 </body>
