--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<header th:replace="~{header :: header}">
+<header id="header">
     header 삽입부
     <hr>
 </header>
@@ -77,7 +77,7 @@
 
 </main>
 
-<footer th:replace="footer :: footer"></footer>
+<footer id="footer"></footer>
 
 
 </body>
