--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>게시글 페이지</title>
+
+    <title>게시판 페이지</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Min sang">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 
 <body>
 
-<header id="header">
+<header id="header" >
     header 삽입부
     <hr>
 </header>
 
 
-<main>
-    main class="container">
+<main class="container">
     <header class="py-5 text-center">
         <h1>첫번째 글</h1>
     </header>
@@ -24,9 +29,7 @@
             <aside>
                 <p><span class="nick-name">Uno</span></p>
                 <p><a class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-                <p>
-                    <time datetime="2022-01-01T00:00:00">2022-01-01</time>
-                </p>
+                <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
                 <p>#java</p>
             </aside>
         </section>
@@ -91,7 +94,9 @@
             </ul>
         </nav>
     </div>
+
 </main>
+
 
 <footer id="footer"></footer>
 
