--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -12,7 +12,9 @@
 
 <body>
 
-<header id="header"></header>
+<header id="header">
+    헤더 삽입부 <hr>
+</header>
 
 
 <main class="container">
@@ -59,22 +61,22 @@
     </div>
 
 
-    <table class="table">
+    <table class="table" id="article-table">
         <thead>
         <tr>
-            <th class="col-6">제목</th>
-            <th class="col-2">해시태그</th>
-            <th class="col">작성자</th>
-            <th class="col">작성일</th>
+            <th class="title col-6">제목</th>
+            <th class="hashtag col-2">해시태그</th>
+            <th class="user-id col">작성자</th>
+            <th class="created-at col">작성일</th>
         </tr>
         </thead>
 
         <tbody>
         <tr>
-            <td>첫글</td>
-            <td>#java</td>
-            <td>Minsang</td>
-            <td>2023-02-02</td>
+            <td class="title"><a>첫글</a></td>
+            <td class="hashtag">#java</td>
+            <td class="user-id">Minsang</td>
+            <td class="created-at"><time>2023-02-02</time></td>
         </tr>
         <tr>
             <td>두번쨰글</td>
@@ -107,7 +109,9 @@
 
 </main>
 
-<footer id="footer"></footer>
+<footer id="footer">
+    푸터 삽입부
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
