--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -19,23 +19,23 @@
 </header>
 
 
-<main class="container">
-    <header class="py-5 text-center">
+<main id = "article-main" class="container">
+    <header id = "article-header" class="py-5 text-center">
         <h1>첫번째 글</h1>
     </header>
 
     <div class="row g-5">
         <section class="col-md-5 col-lg-4 order-md-last">
             <aside>
-                <p><span class="nick-name">Uno</span></p>
-                <p><a class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-                <p><time datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-                <p>#java</p>
+                <p><span id ="nickname" class="nick-name">Uno</span></p>
+                <p><a id= "email" class="u-url" rel="me" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+                <p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+                <p id="hashtag">#java</p>
             </aside>
         </section>
 
-        <article class="col-md-7 col-lg-8">
-            <p>본문<br><br></p>
+        <article id="article-content" class="col-md-7 col-lg-8">
+            <pre>본문<br><br></pre>
         </article>
     </div>
 
@@ -52,7 +52,7 @@
                 </div>
             </form>
 
-            <ul>
+            <ul id = "article-comments" class="row col-7">
                 <li>
                     <div>
                         <time><small>2022-01-01</small></time>
@@ -98,7 +98,9 @@
 </main>
 
 
-<footer id="footer"></footer>
+<footer id="footer">
+    푸터삽입부
+</footer>
 
 
 </body>
