--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,10 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>헤더</title>
+    <title>Title</title>
 </head>
 <body>
-
 <header class="p-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -15,8 +14,9 @@
             </ul>
 
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                <span id="username" class="text-white me-2">username</span>
+                <a role="button" id="login" class="btn btn-outline-light me-2">Login</a>
+                <a role="button" id="logout" class="btn btn-outline-light me-2">Logout</a>
             </div>
         </div>
     </div>
